# slurp

./: .all-contributorsrc  .aspell.en.pws  .codespellrc  .deepsource.toml  .editorconfig  .erb-lint.yml  .eslintignore  .eslintrc  .eslintrc.json  .gitignore  .hound.yml  .linkspector.yml  .markdownlint.yml  .mdlrc  .overcommit.yml  .percy.yml  .pre-commit-config.yaml  .prettierrc  .readthedocs.yaml  .reek.yml  .rubocop.yml  .snyk  .textlintrc  .travis.yml  .yamllint  404.html  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Gemfile  README.md  _config.yml  about.html  about.md  app.json  check-csv.sh  check-revive.sh  check-spelling-single.sh  check-spelling.sh  check-toml.sh  (+30 more)
.circleci/: config.yml
.git-rewrite/: backup-refs  commit  heads  message  revs
.github/: .markdownlint.yml  dependabot.yml  invite-contributors.yml  labeler.yml
_data/: contributors.csv  docs_nav.yml  favourites.csv  flags.csv  games.csv  github-team.csv  info.yml  movies.csv  music.csv  primary_nav.yml  team.csv  tv.csv
_docs/: built-in-datatypes.md  codewars.md  database.md  dita-to-pdf-with-eclipse.md  eclipse-cheatsheets-to-dita-to-pdf.md  eclipse-cheatsheets-to-dita-with-python.md  flicker-diff.md  git.md  go.md  hashcheck.md  index.md  links.md  ruby-cheat-sheets.md  ruby-strip.md  ruby.md  seek.md  serif-software.md  sql-file.md  well-formed.md
_includes/: analytics.html  docs_contents.html  footer.html  head.html  header.html  icons.html
_layouts/: default.html  docs.html  page.html
_posts/: 2018-09-09-chess.md  2018-09-09-lode-runner.md  2018-09-09-matrix.md  2018-09-09-turing.md  (+13 more)
(+892 files in other folders)
