# -----------------------------------------------------------------------------
# Root pyproject.toml used only for documentation & dev dependency management.
# This is NOT a distributable Python package. Do not publish this meta project.
# -----------------------------------------------------------------------------
[project]
name = "slurp-monorepo-meta"
version = "0.0.0"
description = "Internal meta project for slurp documentation and development tooling (not published)"
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
dev = [
  "pre-commit"
]
